fix tooloption overflow on mobile

--- a/static/bypass/custom.css
+++ b/static/bypass/custom.css
@@ -30,6 +30,13 @@
 	-webkit-overflow-scrolling: touch;
 	-ms-overflow-style: none;
 }
+@media only screen and (max-width: 720px) {
+	.pannels {
+		margin-bottom: 56vw;
+	}
+}
+
+.z-100 { z-index: 100; }
 
 /*================ Typography ================*/
 h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
@@ -164,8 +171,9 @@ h5, .h5 { font-size: 0.93rem; }
 	display: flex;
 	width: 100%;
 	height: 100%;
-	border-style: dashed;
-	border: 1px solid #585861;
+	min-height: 82px;
+	border: 2px solid #3C3C42;
+	background-color: #1e1e215e;
 }
 .block-option-group {
 	margin-bottom: 1.5rem;
